# nexus-iq-sdk

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
.trunk/: trunk.yaml
docs/: Action.md  ApiApplicationBaseDTO.md  ApiApplicationCategoryDTO.md  ApiApplicationDTO.md  ApiApplicationEvaluationCommitDTO.md  ApiApplicationEvaluationResultDTOV2.md  ApiApplicationEvaluationStatusDTOV2.md  ApiApplicationListDTO.md  ApiApplicationReportDTOV2.md  ApiApplicationTagDTO.md  ApiApplicationViolationDTOV2.md  ApiApplicationViolationListDTOV2.md  ApiApplicationWaiverDTO.md  ApiArtifactoryConnectionDTO.md  ApiArtifactoryConnectionStatusRequestDTO.md  ApiArtifactoryConnectionStatusResponseDTO.md  ApiComponentChangeActionDTO.md  ApiComponentDTOV2.md  ApiComponentDetailsDTOV2.md  ApiComponentDetailsRequestDTOV2.md  ApiComponentDetailsResultDTOV2.md  ApiComponentEvaluationRequestDTOV2.md  ApiComponentEvaluationResultDTOV2.md  ApiComponentEvaluationTicketDTOV2.md  ApiComponentIdentifierDTOV2.md  ApiComponentOrPurlIdentifierDTOV2.md  ApiComponentPolicyViolationDTO.md  ApiComponentPolicyViolationListDTOV2.md  ApiComponentPolicyWaiversDTO.md  ApiComponentProjectDataDTO.md  ApiComponentProjectMetadataDTO.md  ApiComponentProjectScmDTO.md  ApiComponentProjectScmDetailsDTO.md  ApiComponentProjectScmMetadataDTO.md  ApiComponentReleasedFromQuarantineDTO.md  ApiComponentRemediationDTO.md  ApiComponentRemediationValueDTO.md  ApiComponentTransitivePolicyViolationsDTO.md  ApiComponentWaiversDTO.md  ApiComponentsInQuarantineDTO.md  (+200 more)
nexus_iq_sdk/: __init__.py  api_client.py  configuration.py  rest.py
nexus_iq_sdk/api/: __init__.py  application_categories_api.py  applications_api.py  claim_api.py  components_api.py  composite_source_control_api.py  composite_source_control_config_validator_api.py  config_api.py  config_artifactory_connection_api.py  config_crowd_api.py  config_jira_api.py  labels_api.py  (+29 more)
test/: test_action.py  test_api_application_base_dto.py  test_api_application_category_dto.py  test_api_application_dto.py  test_api_application_evaluation_commit_dto.py  test_api_application_evaluation_result_dtov2.py  test_api_application_evaluation_status_dtov2.py  test_api_application_list_dto.py  test_api_application_report_dtov2.py  test_api_application_tag_dto.py  test_api_application_violation_dtov2.py  test_api_application_violation_list_dtov2.py  test_api_application_waiver_dto.py  test_api_artifactory_connection_dto.py  test_api_artifactory_connection_status_request_dto.py  test_api_artifactory_connection_status_response_dto.py  test_api_component_change_action_dto.py  test_api_component_details_dtov2.py  test_api_component_details_request_dtov2.py  test_api_component_details_result_dtov2.py  test_api_component_dtov2.py  test_api_component_evaluation_request_dtov2.py  test_api_component_evaluation_result_dtov2.py  test_api_component_evaluation_ticket_dtov2.py  test_api_component_identifier_dtov2.py  test_api_component_or_purl_identifier_dtov2.py  test_api_component_policy_violation_dto.py  test_api_component_policy_violation_list_dtov2.py  test_api_component_policy_waivers_dto.py  test_api_component_project_data_dto.py  test_api_component_project_metadata_dto.py  test_api_component_project_scm_details_dto.py  test_api_component_project_scm_dto.py  test_api_component_project_scm_metadata_dto.py  test_api_component_released_from_quarantine_dto.py  test_api_component_remediation_dto.py  test_api_component_remediation_value_dto.py  test_api_component_transitive_policy_violations_dto.py  test_api_component_waivers_dto.py  test_api_components_in_quarantine_dto.py  (+199 more)
(+200 files in other folders)
